# PyxelStein3D

./: LICENSE  README.md  pyproject.toml
pyxelstein/: app.py
pyxelstein/assets/: pyxelstein.pyxres
